securitycenter/query-builder/k8s/manifests/templates/envs/prod/back-image.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
spec:
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "gcr.io/prod-qb-clsecteam/scc-query-builder-back:v3.3.0"
        - name: cloudsql-proxy
          command: ["/cloud_sql_proxy",
                    "-instances=qb-joonixnet:us-central1:db-qb-instance=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
